spacing fixes

--- a/less/custom/alumni/custom.less
+++ b/less/custom/alumni/custom.less
@@ -107,7 +107,7 @@
 .primary-content-area p a { 
 	text-decoration:underline; 
 }
-//Remove button underlines
+// Remove button underlines
 .primary-content-area p.button-container a { 
 	text-decoration: none; 
 }
@@ -119,6 +119,10 @@
     margin-right: 4px;
     margin-bottom: 1px;
   }
+}
+// Add a margin below buttons
+.btn-etrail, .btn-travelevents {
+	margin-bottom: 1em;
 }
 
 // Footer social media buttons
